fix layout issue

--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -34,7 +34,7 @@
   align-items: center;
   padding: 0 5em;
   margin-top: 1em;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   flex-direction: column;
   z-index: 1;
 }
